feat : architecture Tech and TechCard

--- a/src/components/MainContent.astro
+++ b/src/components/MainContent.astro
@@ -1,5 +1,7 @@
 ---
 import TheApp from "./TheApp.astro";
+import Tech from "./Tech.astro";
+
 ---
 
 <main>
@@ -20,11 +22,7 @@ import TheApp from "./TheApp.astro";
     <div class="section-wrapper">
         <section id="tech">
             <h2>Tech</h2>
-            <p>aaaaaa</p>
-            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
-            /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
-            /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+            <Tech/>
         </section>
     </div>
     <div class="section-wrapper">
