--- a/src/components/TheApp.astro
+++ b/src/components/TheApp.astro
@@ -109,6 +109,11 @@ import updatePlaylist from "../../public/walktrough/UpdatePlaylist.png?url";
         color: var(--app-logo-color-darker);
     }
 
+    .theapp-section-header p {
+        
+        color: var(--subheader-text);
+    }
+
     .section-left img {
         margin-right: 3rem;
         filter: drop-shadow(-20px 15px 10px var(--secondary-color));
