--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,6 +66,8 @@
         --secondary-color: #292c32;
         --dark-filler: rgb(37 37 43);
 
+        --subheader-text : #cecccc;
+
         --spacer: #4e5053;
 
         --phone-break-width: 989px;
@@ -82,7 +84,7 @@
             DejaVu Sans Mono,
             Bitstream Vera Sans Mono,
             Courier New,
-            monospace;
+            monospace !important;
     }
     body {
         background: var(--backkground) !important;
