--- a/src/components/Tech.astro
+++ b/src/components/Tech.astro
@@ -16,42 +16,42 @@ const techCardData = [
     {
         icon: reactIco,
         title: "ReactJs",
-        text: "",
+        text: "The perfect choice for develop large, scalable and reusable interfaces. When multiple people is colaborating in the same interface the modularization of components is a must",
     },
     {
         icon: tsIco,
         title: "TypeScript",
-        text: "",
+        text: "Preventing runtime errors, improving code quality and facilitating the development experience has being the main reason for using this superset of JavaScript",
     },
     {
         icon: electronIco,
         title: "ElectronJs",
-        text: "",
+        text: "The framework for developing cross-platform was the perfect choice for this project. Develop once and run everywhere",
     },
     {
         icon: mongoIco,
-        title: "MongoDb",
-        text: "",
+        title: "MongoDB",
+        text: "Fast non relational database. Used mainly for constant-changing schemas, this works perfectly with the incremental develop of the app",
     },
     {
         icon: cssIco,
-        title: "Css",
-        text: "",
+        title: "CSS",
+        text: "The backbone of the app's interfaces. Fast and reliable it allows for full control and responsive behaviour",
     },
     {
         icon: pyIco,
         title: "Python",
-        text: "",
+        text: "Used in combination with Fast API to serve the API that is being consumed by the frontend application and for comunicating with the database for persistency",
     },
     {
         icon: fastApiIco,
         title: "Fast API",
-        text: "",
+        text: "Scalable and high performance framework used to create the API. It also offers a full documented Swagger page with the various endpoints",
     },
     {
         icon: boostrapIco,
         title: "Boostrap",
-        text: "",
+        text: "Frontend toolkit for fast development and responsive interfaces",
     },
     /* {
         icon: miuIco,
@@ -61,7 +61,7 @@ const techCardData = [
     {
         icon: gaIco,
         title: "Github Actions",
-        text: "",
+        text: "Integrated CI/CD tool used for running tests and validating the codebase with the linter. Syntax of new branches is also being checked",
     },
 ];
 ---
