--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,7 +33,9 @@ import pyIco from "../../public/icons/python.png?url";
             >
                 <a href="#theapp">
                     <button class="my-btn"
-                        ><p style="margin: 0 !important;color:#0d0d0e !important;font-weight:700">
+                        ><p
+                            style="margin: 0 !important;color:#0d0d0e !important;font-weight:700"
+                        >
                             Get started
                         </p></button
                     >
@@ -48,7 +50,13 @@ import pyIco from "../../public/icons/python.png?url";
         <div
             class="d-flex justify-content-center align-items-center header-img-container"
         >
-            <img class="img-fluid" src={laptopHome} alt="Laptop App Display" width="700px" height="314px"/>
+            <img
+                class="img-fluid"
+                src={laptopHome}
+                alt="Laptop App Display"
+                width="700px"
+                height="314px"
+            />
         </div>
     </div>
 
@@ -65,16 +73,76 @@ import pyIco from "../../public/icons/python.png?url";
             class="d-flex flex-wrap justify-content-center"
             style="padding: 1%;border-bottom: 1px solid var(--app-logo-color)"
         >
-            <img class="tech-ico" src={reactIco} alt="react icon" width="32px" height="32px"/>
-            <img class="tech-ico" src={tsIco} alt="typescript icon" width="32px" height="32px"/>
-            <img class="tech-ico" src={electronIco} alt=" icon" width="32px" height="32px"/>
-            <img class="tech-ico" src={mongoIco} alt=" icon" width="32px" height="32px"/>
-            <img class="tech-ico" src={cssIco} alt=" icon" width="32px" height="32px"/>
-            <img class="tech-ico" src={pyIco} alt=" icon" width="32px" height="32px"/>
-            <img class="tech-ico" src={fastApiIco} alt=" iconicon" width="32px" height="32px"/>
-            <img class="tech-ico" src={boostrapIco} alt=" icon" width="32px" height="32px"/>
-            <img class="tech-ico" src={miuIco} alt=" icon" width="32px" height="32px"/>
-            <img class="tech-ico" src={gaIco} alt="" width="32px" height="32px"/>
+            <img
+                class="tech-ico"
+                src={reactIco}
+                alt="react icon"
+                width="32px"
+                height="32px"
+            />
+            <img
+                class="tech-ico"
+                src={tsIco}
+                alt="typescript icon"
+                width="32px"
+                height="32px"
+            />
+            <img
+                class="tech-ico"
+                src={electronIco}
+                alt=" icon"
+                width="32px"
+                height="32px"
+            />
+            <img
+                class="tech-ico"
+                src={mongoIco}
+                alt=" icon"
+                width="32px"
+                height="32px"
+            />
+            <img
+                class="tech-ico"
+                src={cssIco}
+                alt=" icon"
+                width="32px"
+                height="32px"
+            />
+            <img
+                class="tech-ico"
+                src={pyIco}
+                alt=" icon"
+                width="32px"
+                height="32px"
+            />
+            <img
+                class="tech-ico"
+                src={fastApiIco}
+                alt=" iconicon"
+                width="32px"
+                height="32px"
+            />
+            <img
+                class="tech-ico"
+                src={boostrapIco}
+                alt=" icon"
+                width="32px"
+                height="32px"
+            />
+            <img
+                class="tech-ico"
+                src={miuIco}
+                alt=" icon"
+                width="32px"
+                height="32px"
+            />
+            <img
+                class="tech-ico"
+                src={gaIco}
+                alt=""
+                width="32px"
+                height="32px"
+            />
         </div>
     </div>
 </header>
@@ -94,12 +162,12 @@ import pyIco from "../../public/icons/python.png?url";
     }
 
     .text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
+        background-image: var(--accent-gradient);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-size: 400%;
+        background-position: 0%;
+    }
 
     h1 {
         font-size: 5rem;
@@ -129,7 +197,6 @@ import pyIco from "../../public/icons/python.png?url";
         background-color: var(--background-secondary);
         border: 1px solid var(--app-logo-color-darker);
         filter: brightness(0.85);
-
     }
 
     .header-image-container-phone {
