--- a/src/components/Tech.astro
+++ b/src/components/Tech.astro
@@ -17,51 +17,62 @@ const techCardData = [
         icon: reactIco,
         title: "ReactJs",
         text: "The perfect choice for develop large, scalable and reusable interfaces. When multiple people is colaborating in the same interface the modularization of components is a must",
+        link: "https://es.react.dev/",
     },
     {
         icon: tsIco,
         title: "TypeScript",
         text: "Preventing runtime errors, improving code quality and facilitating the development experience has being the main reason for using this superset of JavaScript",
+        link: "https://www.typescriptlang.org/",
     },
     {
         icon: electronIco,
         title: "ElectronJs",
         text: "The framework for developing cross-platform was the perfect choice for this project. Develop once and run everywhere",
+        link: "https://www.electronjs.org/es/",
     },
     {
         icon: mongoIco,
         title: "MongoDB",
         text: "Fast non relational database. Used mainly for constant-changing schemas, this works perfectly with the incremental develop of the app",
+        link: "https://www.mongodb.com/es",
     },
     {
         icon: cssIco,
         title: "CSS",
         text: "The backbone of the app's interfaces. Fast and reliable it allows for full control and responsive behaviour",
+        link: "https://developer.mozilla.org/es/docs/Web/CSS",
     },
     {
         icon: pyIco,
         title: "Python",
         text: "Used in combination with Fast API to serve the API that is being consumed by the frontend application and for comunicating with the database for persistency",
+        link: "https://www.python.org/",
     },
     {
         icon: fastApiIco,
         title: "Fast API",
         text: "Scalable and high performance framework used to create the API. It also offers a full documented Swagger page with the various endpoints",
+        link: "https://fastapi.tiangolo.com/",
     },
     {
         icon: boostrapIco,
         title: "Boostrap",
         text: "Frontend toolkit for fast development and responsive interfaces",
+        link: "https://getbootstrap.com/",
     },
     /* {
         icon: miuIco,
         title: "Material UI",
         text: "",
+        link : "https://mui.com/"
+    
     }, */
     {
         icon: gaIco,
         title: "Github Actions",
         text: "Integrated CI/CD tool used for running tests and validating the codebase with the linter. Syntax of new branches is also being checked",
+        link: "https://github.com/features/actions",
     },
 ];
 ---
@@ -74,6 +85,7 @@ const techCardData = [
                     icon={tech.icon}
                     title={tech.title}
                     text={tech.text}
+                    link={tech.link}
                 />
             );
         })
