feat : add draft goals and goalscard

--- a/src/components/MainContent.astro
+++ b/src/components/MainContent.astro
@@ -1,6 +1,7 @@
 ---
 import TheApp from "./TheApp.astro";
 import Tech from "./Tech.astro";
+import Goals from "./Goals.astro";
 ---
 
 <main>
@@ -16,6 +17,7 @@ import Tech from "./Tech.astro";
     <div class="section-wrapper">
         <section id="goals">
             <h2>Goals</h2>
+            <Goals />
         </section>
     </div>
     <div class="section-wrapper">
