feat : add hover right navbar icons border color blue

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -39,8 +39,10 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
                     >
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#theapp"
-                        >The App</a
+                    <a
+                        class="nav-link active"
+                        aria-current="page"
+                        href="#theapp">The App</a
                     >
                 </li>
                 <li class="nav-item">
@@ -168,10 +170,12 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
 
     .navbar-item-right {
         margin-right: 4px;
+        border-radius: 999px;
     }
 
     .navbar-item-right:hover {
         filter: brightness(0.75);
+        border: 1px solid var(--app-logo-color);
     }
 
     .navbar-toggler-icon {
