feat : add goals card complete

--- a/src/components/Goals.astro
+++ b/src/components/Goals.astro
@@ -8,61 +8,96 @@ import testingIco from "../../public/icons/goals-icons/icons8-prueba-48.png?url"
 import securityIco from "../../public/icons/goals-icons/icons8-seguridad-48.png?url";
 import serverIco from "../../public/icons/goals-icons/icons8-servidor-48.png?url";
 import groupTaskIco from "../../public/icons/goals-icons/icons8-tarea-grupal-48.png?url";
+import newIco from "../../public/icons/goals-icons/icons8-nuevo-48.png?url";
 import GoalCard from "./GoalCard.astro";
 
 const goalsCardData = [
     {
         icon: scalabilityIco,
-        text: "Focused on scalability",
+        text: "Developed for scalability and quick iterations",
     },
     {
         icon: gitForkIco,
-        text: "Focused on scalability",
+        text: "Control version and contributions using Git",
     },
     {
         icon: cloneIco,
-        text: "Focused on scalability",
+        text: "Full functionality clone of Spotify",
     },
     {
         icon: goodPracticesIco,
-        text: "Focused on scalability",
+        text: "Develop with the best programming practices",
     },
     {
         icon: writeIco,
-        text: "Focused on scalability",
+        text: "Cross platform with one codebase",
     },
     {
         icon: testingIco,
-        text: "Focused on scalability",
+        text: "Full coverage test suite",
     },
     {
         icon: securityIco,
-        text: "Focused on scalability",
+        text: "Focused on security",
     },
     {
         icon: serverIco,
-        text: "Focused on scalability",
+        text: "Song streaming with AWS services",
     },
     {
         icon: groupTaskIco,
-        text: "Focused on scalability",
+        text: "Agile development and team organization",
+    },
+    {
+        icon: newIco,
+        text: "Added new functionality",
     },
 ];
 ---
 
-<div class="d-flex flex-column goals-wrapper">
-    {
-        goalsCardData.map((goalCardData) => {
-            return (
-                <GoalCard icon={goalCardData.icon} text={goalCardData.text} />
-            );
-        })
-    }
+
+<div class="d-flex flex-row wrapperGoalCard">
+    <div class="d-flex flex-column goals-column">
+        {
+            goalsCardData.slice(0,5).map((goalCardData) => {
+                return (
+                    <GoalCard icon={goalCardData.icon} text={goalCardData.text} />
+                );
+            })
+        }
+    </div>
+    
+    <div class="d-flex flex-column goals-column">
+        {
+            goalsCardData.slice(5,goalsCardData.length).map((goalCardData) => {
+                return (
+                    <GoalCard icon={goalCardData.icon} text={goalCardData.text} />
+                );
+            })
+        }
+    </div>
 </div>
 
 <style>
-    .goals-wrapper {
-        margin-bottom: 8rem;
+
+    .wrapperGoalCard{
+
+        padding-bottom: 8rem !important;
+        gap: 60px;
+    }
+    .goals-column {
         gap: 14px;
     }
+
+    @media (max-width: 1332px) {
+        
+        .wrapperGoalCard{
+            flex-direction: column !important;
+            gap: 0px;
+        }
+        .goals-column{
+            gap: 28px;
+        }
+    }
+
 </style>
