--- a/src/components/MainContent.astro
+++ b/src/components/MainContent.astro
@@ -68,5 +68,6 @@ import Goals from "./Goals.astro";
         margin: auto !important;
         max-width: 80rem !important;
         padding-top: 2rem;
+        color: white;
     }
 </style>
