--- a/src/components/GoalCard.astro
+++ b/src/components/GoalCard.astro
@@ -5,7 +5,7 @@ const { text } = Astro.props;
 
 <div class="d-flex flex-row wrapperGoalCard">
     <img src={icon} alt="" />
-    <p class="m-auto">{text}</p>
+    <p>{text}</p>
 </div>
 
 <style>
@@ -15,5 +15,21 @@ const { text } = Astro.props;
 
     .wrapperGoalCard img{
         width: 62px;
+        height: 62px;
     }
+
+    .wrapperGoalCard p{
+        margin-bottom: auto;
+        margin-top: auto;
+        font-size: 1.75rem;
+        width: 100%;
+    }
+
+    @media (max-width: 1332px) {
+        
+        .wrapperGoalCard{
+            gap: 28px;
+        }
+    } 
+
 </style>
