fix : gap between goals

--- a/src/components/GoalCard.astro
+++ b/src/components/GoalCard.astro
@@ -11,14 +11,15 @@ const { text } = Astro.props;
 <style>
     .wrapperGoalCard {
         gap: 14px;
+        align-items: center;
     }
 
-    .wrapperGoalCard img{
+    .wrapperGoalCard img {
         width: 62px;
         height: 62px;
     }
 
-    .wrapperGoalCard p{
+    .wrapperGoalCard p {
         margin-bottom: auto;
         margin-top: auto;
         font-size: 1.75rem;
@@ -26,10 +27,8 @@ const { text } = Astro.props;
     }
 
     @media (max-width: 1332px) {
-        
-        .wrapperGoalCard{
+        .wrapperGoalCard {
             gap: 28px;
         }
-    } 
-
+    }
 </style>
