feat : change right-items navbar from border on hover to shadow

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -56,8 +56,8 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
                     >
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#about"
-                        >About</a
+                    <a class="nav-link active" aria-current="page" href="#architecture"
+                        >Architecture</a
                     >
                 </li>
             </ul>
@@ -175,7 +175,7 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
 
     .navbar-item-right:hover {
         filter: brightness(0.75);
-        border: 1px solid var(--app-logo-color);
+        box-shadow: 0 0 1px 2px var(--app-logo-color);
     }
 
     .navbar-toggler-icon {
