feat : add Architecture section

--- a/src/components/MainContent.astro
+++ b/src/components/MainContent.astro
@@ -2,6 +2,7 @@
 import TheApp from "./TheApp.astro";
 import Tech from "./Tech.astro";
 import Goals from "./Goals.astro";
+import Architecture from "./Architecture.astro"
 ---
 
 <main>
@@ -27,13 +28,9 @@ import Goals from "./Goals.astro";
         </section>
     </div>
     <div class="section-wrapper">
-        <section id="about">
-            <h2>About</h2>
-            <p>aaaaaa</p>
-            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
-            /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-            <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br
-            /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+        <section id="architecture">
+            <h2 style="margin-bottom: 4rem !important;">Architecture</h2>
+            <Architecture/>
         </section>
     </div>
 </main>
