--- a/src/components/TheApp.astro
+++ b/src/components/TheApp.astro
@@ -2,7 +2,7 @@
 import home from "../../public/walktrough/Home.png?url";
 import playlist from "../../public/walktrough/Playlist.png?url";
 import uploadSong from "../../public/walktrough/UploadSong.png?url";
-import updatePlaylist from "../../public/walktrough/UpdatePlaylist.png?url";
+import explorar from "../../public/walktrough/Explorar.png?url";
 ---
 
 <div class="theapp-section section-left">
@@ -77,7 +77,7 @@ import updatePlaylist from "../../public/walktrough/UpdatePlaylist.png?url";
         </p>
     </div>
 
-    <img class="img-fluid" src={updatePlaylist} alt="" />
+    <img class="img-fluid" src={explorar} alt="" />
 </div>
 
 <style>
