--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,6 +67,7 @@
         --dark-filler: rgb(37 37 43);
 
         --subheader-text: #cecccc;
+        --subheader-text-darker : #bcbaba;
 
         --spacer: #4e5053;
 
