feat : add the app text

--- a/src/components/TheApp.astro
+++ b/src/components/TheApp.astro
@@ -11,15 +11,7 @@ import explorar from "../../public/walktrough/Explorar.png?url";
     <div class="theapp-section-header">
         <h3 class="reveal">Explore the best artists and music</h3>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged. It was popularised in the 1960s
-            with the release of Letraset sheets containing Lorem Ipsum passages,
-            and more recently with desktop publishing software like Aldus
-            PageMaker including versions of Lorem Ipsum.
+            All of your favourites artists and songs are now in SpotifyElectron. Lets deep in and find all the new features.
         </p>
     </div>
 </div>
@@ -27,15 +19,9 @@ import explorar from "../../public/walktrough/Explorar.png?url";
     <div class="theapp-section-header">
         <h3 class="reveal">Organize your favorite music in playlists</h3>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged. It was popularised in the 1960s
-            with the release of Letraset sheets containing Lorem Ipsum passages,
-            and more recently with desktop publishing software like Aldus
-            PageMaker including versions of Lorem Ipsum.
+            Save your songs into playlist and access them from wherever and
+            whenever you want. Access your friends playlist for sharing and discovering new
+            music.
         </p>
     </div>
 
@@ -47,16 +33,8 @@ import explorar from "../../public/walktrough/Explorar.png?url";
 
     <div class="theapp-section-header">
         <h3 class="reveal">Upload your songs</h3>
-        <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged. It was popularised in the 1960s
-            with the release of Letraset sheets containing Lorem Ipsum passages,
-            and more recently with desktop publishing software like Aldus
-            PageMaker including versions of Lorem Ipsum.
+        <p>Have you missed not finding a not so popular song in other streaming services? Thats not the 
+            problem from now on, SpotifyElectron allows users to upload their own music and share them globally.
         </p>
     </div>
 </div>
@@ -64,16 +42,9 @@ import explorar from "../../public/walktrough/Explorar.png?url";
 <div class="theapp-section section-right">
     <div class="theapp-section-header">
         <h3 class="reveal">Discover and try the new interface</h3>
-        <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged. It was popularised in the 1960s
-            with the release of Letraset sheets containing Lorem Ipsum passages,
-            and more recently with desktop publishing software like Aldus
-            PageMaker including versions of Lorem Ipsum.
+        <p>Modern interface with the best user experience. Search by genre, find your favourite songs or see 
+            what your friends are playing : the limit its up to you. 
+
         </p>
     </div>
 
