fix : typo error

--- a/src/components/TheApp.astro
+++ b/src/components/TheApp.astro
@@ -11,7 +11,7 @@ import explorar from "../../public/walktrough/Explorar.png?url";
     <div class="theapp-section-header">
         <h3 class="reveal">Explore the best artists and music</h3>
         <p>
-            All of your favourites artists and songs are now in SpotifyElectron. Lets deep in and find all the new features.
+            All of your favourites artists and songs are now in SpotifyElectron. Lets dig in and find all the new features.
         </p>
     </div>
 </div>
