--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -62,7 +62,7 @@ import antonioMrtzLogoIcon from "../../public/icons/logoAM.png?url";
         <div
             class="d-flex flex-row align-items-center justify-content-center gap-3"
         >
-            <img src={antonioMrtzLogoIcon} class="img-fluid" alt="" />
+            <img src={antonioMrtzLogoIcon} class="img-fluid" alt="antonio martinez icon" />
             <div
                 style="font-weight: 500;font-size:1.2rem;color:var(--app-logo-color)"
             >
