--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -90,56 +90,56 @@ import pyIco from "../../public/icons/python.png?url";
             <img
                 class="tech-ico"
                 src={electronIco}
-                alt=" icon"
+                alt=" electron icon"
                 width="32px"
                 height="32px"
             />
             <img
                 class="tech-ico"
                 src={mongoIco}
-                alt=" icon"
+                alt=" mongodb icon"
                 width="32px"
                 height="32px"
             />
             <img
                 class="tech-ico"
                 src={cssIco}
-                alt=" icon"
+                alt="css icon"
                 width="32px"
                 height="32px"
             />
             <img
                 class="tech-ico"
                 src={pyIco}
-                alt=" icon"
+                alt="python icon"
                 width="32px"
                 height="32px"
             />
             <img
                 class="tech-ico"
                 src={fastApiIco}
-                alt=" iconicon"
+                alt="fast api icon"
                 width="32px"
                 height="32px"
             />
             <img
                 class="tech-ico"
                 src={boostrapIco}
-                alt=" icon"
+                alt="boostrap icon"
                 width="32px"
                 height="32px"
             />
             <img
                 class="tech-ico"
                 src={miuIco}
-                alt=" icon"
+                alt="material ui icon"
                 width="32px"
                 height="32px"
             />
             <img
                 class="tech-ico"
                 src={gaIco}
-                alt=""
+                alt="github actions icon"
                 width="32px"
                 height="32px"
             />
