--- a/src/components/Tech.astro
+++ b/src/components/Tech.astro
@@ -16,13 +16,13 @@ const techCardData = [
     {
         icon: reactIco,
         title: "ReactJs",
-        text: "The perfect choice for develop large, scalable and reusable interfaces. When multiple people is colaborating in the same interface the modularization of components is a must",
+        text: "The perfect choice for developing large, scalable and reusable interfaces. When multiple people is colaborating in the same interface the modularization of components is a must",
         link: "https://es.react.dev/",
     },
     {
         icon: tsIco,
         title: "TypeScript",
-        text: "Preventing runtime errors, improving code quality and facilitating the development experience has being the main reason for using this superset of JavaScript",
+        text: "Preventing runtime errors, improving code quality and facilitating the development experience have being the main reason for using this superset of JavaScript",
         link: "https://www.typescriptlang.org/",
     },
     {
@@ -40,7 +40,7 @@ const techCardData = [
     {
         icon: cssIco,
         title: "CSS",
-        text: "The backbone of the app's interfaces. Fast and reliable it allows for full control and responsive behaviour",
+        text: "The backbone of the app's interfaces. Fast and reliable, it allows full control and responsive behaviour",
         link: "https://developer.mozilla.org/es/docs/Web/CSS",
     },
     {
