--- a/src/components/TheApp.astro
+++ b/src/components/TheApp.astro
@@ -6,7 +6,7 @@ import explorar from "../../public/walktrough/Explorar.webp?url";
 ---
 
 <div class="theapp-section section-left">
-    <img class="img-fluid" src={home} alt="" />
+    <img class="img-fluid" src={home} alt="Home screenshot" />
 
     <div class="theapp-section-header">
         <h3 class="reveal">Explore the best artists and music</h3>
@@ -20,20 +20,20 @@ import explorar from "../../public/walktrough/Explorar.webp?url";
         <h3 class="reveal">Organize your favorite music in playlists</h3>
         <p>
             Save your songs into playlist and access them from wherever and
-            whenever you want. Access your friends playlist for sharing and discovering new
+            whenever you want. Access your friend's playlists for sharing and discovering new
             music.
         </p>
     </div>
 
-    <img class="img-fluid" src={playlist} alt="" />
+    <img class="img-fluid" src={playlist} alt="Playlist screenshot" />
 </div>
 
 <div class="theapp-section section-left">
-    <img class="img-fluid" src={uploadSong} alt="" />
+    <img class="img-fluid" src={uploadSong} alt="Upload song screenshot" />
 
     <div class="theapp-section-header">
         <h3 class="reveal">Upload your songs</h3>
-        <p>Have you missed not finding a not so popular song in other streaming services? Thats not the 
+        <p>Have you ever missed not finding a not so popular song in other streaming services? That's not the 
             problem from now on, SpotifyElectron allows users to upload their own music and share them globally.
         </p>
     </div>
@@ -43,12 +43,12 @@ import explorar from "../../public/walktrough/Explorar.webp?url";
     <div class="theapp-section-header">
         <h3 class="reveal">Discover and try the new interface</h3>
         <p>Modern interface with the best user experience. Search by genre, find your favourite songs or see 
-            what your friends are playing : the limit its up to you. 
+            what your friends are playing : the limit it's up to you. 
 
         </p>
     </div>
 
-    <img class="img-fluid" src={explorar} alt="" />
+    <img class="img-fluid" src={explorar} alt="Explorar screenshot" />
 </div>
 
 <style>
