--- a/src/components/TechCard.astro
+++ b/src/components/TechCard.astro
@@ -7,7 +7,7 @@ const { link } = Astro.props;
 
 <a class="tech-card" href={link}>
     <div class="img-wrapper">
-        <img src={icon} alt="" />
+        <img src={icon} alt=`${title} icon` />
     </div>
 
     <div class="header-wrapper">
