feat : add frontend architecture

--- a/src/components/Architecture.astro
+++ b/src/components/Architecture.astro
@@ -2,6 +2,8 @@
 import architectureDiagram from "../../public/architecture/master-streaming-lambda-arch.png?url";
 import backendEndpointDiagram from "../../public/architecture/backend-endpoints.png?url";
 import songArchitecture from "../../public/architecture/song_architecture_aws.png?url";
+import frontendArchitecture from "../../public/architecture/frontend-arch.png?url";
+
 
 ---
 
@@ -49,6 +51,11 @@ import songArchitecture from "../../public/architecture/song_architecture_aws.pn
             </div>
             <div class="architecture-secondary-text-wrapper">
                 <h3>Interface</h3>
+                <img
+                    class="img-fluid"
+                    src={frontendArchitecture}
+                    alt="frontend architecture diagram"
+                />
                 <p>
                     Graphical elements of the interface are developed using web
                     tech like <strong>HTML</strong> and <strong>CSS</strong>,
