fix : import walkthrough name

--- a/src/components/TheApp.astro
+++ b/src/components/TheApp.astro
@@ -1,8 +1,8 @@
 ---
-import home from "../../public/walktrough/Home.webp?url";
-import playlist from "../../public/walktrough/Playlist.webp?url";
-import uploadSong from "../../public/walktrough/UploadSong.webp?url";
-import explorar from "../../public/walktrough/Explorar.webp?url";
+import home from "../../public/walkthrough/Home.webp?url";
+import playlist from "../../public/walkthrough/Playlist.webp?url";
+import uploadSong from "../../public/walkthrough/UploadSong.webp?url";
+import explorar from "../../public/walkthrough/Explorar.webp?url";
 ---
 
 <div class="theapp-section section-left">
